--- a/public/PCEconomic/src/main/resources/templates/article.html
+++ b/public/PCEconomic/src/main/resources/templates/article.html
@@ -196,7 +196,6 @@
                                     </div>
                                 </div>
                             </div>
-
                         </div>
 
                         <div class="card m-3" th:each="valoracio : ${valoracions}"
@@ -223,17 +222,17 @@
                                 <div th:if="${user != null && user.id == valoracio.client.id}"
                                      class="d-flex flex-row-reverse mt-2">
                                     <button style="margin-left: 10px;" type="button" class="btn btn-danger" data-bs-toggle="modal"
-                                            data-bs-target="#deleteModal">
+                                        th:attr="data-bs-target='#deleteModal-' + ${valoracio.id}">
                                         <i class="bi bi-trash"></i>
                                     </button>
                                     <button type="button" class="btn btn-pc-economic-dark" data-bs-toggle="modal"
-                                            data-bs-target="#editModal">
+                                            th:attr="data-bs-target='#editModal-' + ${valoracio.id}">
                                         <i class="bi bi-pencil"></i>
                                     </button>
                                 </div>
                             </div>
 
-                            <div th:if="${user != null}" class="modal fade" id="editModal" tabindex="-1" aria-labelledby="editValorationLabel"
+                            <div th:if="${user != null}" class="modal fade" th:id="'editModal-' + ${valoracio.id}" tabindex="-1" aria-labelledby="editValorationLabel"
                                  aria-hidden="true">
                                 <div class="modal-dialog">
                                     <div class="modal-content">
@@ -271,7 +270,7 @@
                             </div>
 
 
-                            <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel"
+                            <div class="modal fade" th:id="'deleteModal-' + ${valoracio.id}" tabindex="-1" aria-labelledby="deleteModalLabel"
                                  aria-hidden="true">
                                 <div class="modal-dialog">
                                     <div class="modal-content">
