refactor: changed Añadir to Actualizar due to conventions

--- a/public/PCEconomic/src/main/resources/templates/article.html
+++ b/public/PCEconomic/src/main/resources/templates/article.html
@@ -262,7 +262,7 @@
                                                     <label for="editComentari" class="form-label">Comentario</label>
                                                     <input type="text" id="editComentari" th:field="*{comentari}" th:placeholder="${valoracio.comentari}">
                                                 </div>
-                                                <button type="submit" class="btn btn-pc-economic-dark">Añadir</button>
+                                                <button type="submit" class="btn btn-pc-economic-dark">Actualizar</button>
                                             </form>
                                         </div>
                                     </div>
@@ -368,7 +368,6 @@
                                                     "<a href='/article/" + prop2.article.id + "/" + prop2.id + "' class='btn btn-pc-economic-light text-white col-2'>" + v2.valor + "</a>"
                                                 );
                                             }
-
                                         }
                                     }
                                 }
