falta realizar pedido

--- a/public/PCEconomic/src/main/resources/templates/compra.html
+++ b/public/PCEconomic/src/main/resources/templates/compra.html
@@ -64,14 +64,20 @@
                         // Successful capture! For dev/demo purposes:
                         console.log('Capture result', orderData, JSON.stringify(orderData, null, 2));
                         const transaction = orderData.purchase_units[0].payments.captures[0];
-                        alert(`Transaction ${transaction.status}: ${transaction.id}\n\nSee console for all available details`);
-                        // When ready to go live, remove the alert and show a success message within this page. For example:
-                        // const element = document.getElementById('paypal-button-container');
-                        // element.innerHTML = '<h3>Thank you for your payment!</h3>';
-                        // Or go to another URL:  actions.redirect('thank_you.html');
-                        if (transaction.status === "COMPLETED") {
 
-                        }
+                        $.ajax({
+                            url: "/api/pagament",
+                            type: "POST",
+                            data: {
+                                "resp": transaction,
+                                "status": transaction.status,
+                                "paymentMethod": "PAYPAL"
+                            },
+                            success: function (props) {
+                                console.log(props);
+                                window.location.href = "/compra/confirmacion";
+                            }
+                        });
                     });
                 }
             }).render('#paypal-button-container');
