fallo generar Factura

--- a/public/PCEconomic/src/main/resources/templates/compra.html
+++ b/public/PCEconomic/src/main/resources/templates/compra.html
@@ -74,8 +74,7 @@
                                 "paymentMethod": "PAYPAL"
                             },
                             success: function (props) {
-                                console.log(props);
-                                window.location.href = "/compra/confirmacion";
+                                window.location.href = "/";
                             }
                         });
                     });
