feat: changed hyperlinks for th:href and now forgot password link work

--- a/public/PCEconomic/src/main/resources/templates/login.html
+++ b/public/PCEconomic/src/main/resources/templates/login.html
@@ -43,8 +43,8 @@
             </div>
 
             <div class="text-center">
-                <a href="/register">Registrarse</a>
-                <a href="/forgot-password">¿Olvidaste tu contraseña?</a>
+                <a th:href="@{/register}">Registrarse</a>
+                <a th:href="@{/forgotpassword}">¿Olvidaste tu contraseña?</a>
             </div>
         </main>
         <div th:replace="layout/layout.html :: jquery"></div>
