--- a/public/PCEconomic/src/main/resources/templates/register.html
+++ b/public/PCEconomic/src/main/resources/templates/register.html
@@ -121,8 +121,8 @@
 
 
         <div class="text-center">
-            Ya estas registrado?
             <a th:href="@{/login}">Iniciar sesión</a>
+            <a th:href="@{/forgotpassword}">¿Olvidaste tu contraseña?</a>
         </div>
 
     </main>
