fix(article) v0.0.15 return login oauth

--- a/public/PCEconomic/src/main/resources/templates/login.html
+++ b/public/PCEconomic/src/main/resources/templates/login.html
@@ -66,6 +66,11 @@
                                 body: credential,
                             }
                         );
+                        if (await responseFetch.ok) {
+                            window.location.href = "http://localhost:8080/";
+                        } else {
+                            window.location.href = "http://localhost:8080/error";
+                        }
                     },
                 });
                 google.accounts.id.prompt();
