feat: validations for lostpassword form

--- a/public/PCEconomic/src/main/resources/templates/lostpassword.html
+++ b/public/PCEconomic/src/main/resources/templates/lostpassword.html
@@ -40,6 +40,17 @@
                     <div class="text-center mt-3">
                         <button type="submit" class="btn btn-pc-economic-dark">Enviar</button>
                     </div>
+
+                    <div class="m-1 alert alert-danger" th:if="${#fields.hasErrors('email')}">
+                        <i class='bi bi-exclamation-triangle'></i>
+                        <span th:errors="*{email}"></span>
+                    </div>
+
+                    <div class="m-1 alert alert-danger" th:if="${error != null}">
+                        <i class='bi bi-exclamation-triangle'></i>
+                        <span th:text="${error}"></span>
+                    </div>
+
                 </form>
             </div>
         </main>
