--- a/public/PCEconomic/src/main/resources/templates/login.html
+++ b/public/PCEconomic/src/main/resources/templates/login.html
@@ -13,8 +13,8 @@
                 <form class="needs-validation w-25" th:action="@{/login}"
                       th:object="${loginForm}" method="post" novalidate>
                     <div class="mb-3">
-                        <label for="exampleInputEmail1" class="form-label">Correo Electronico</label>
-                        <input th:field="*{email}" type="email" class="form-control" id="exampleInputEmail1"
+                        <label for="email" class="form-label">Correo Electronico</label>
+                        <input th:field="*{email}" type="email" class="form-control" id="email"
                                placeholder="Correo Electronico"
                                aria-describedby="emailHelp" required>
                         <div class="invalid-feedback">
@@ -22,8 +22,8 @@
                         </div>
                     </div>
                     <div class="mb-3">
-                        <label for="exampleInputPassword1" class="form-label">Contraseña</label>
-                        <input th:field="*{password}" type="password" class="form-control" id="exampleInputPassword1"
+                        <label for="password" class="form-label">Contraseña</label>
+                        <input th:field="*{password}" type="password" class="form-control" id="password"
                                placeholder="Contraseña"
                                required>
                         <div class="invalid-feedback">
@@ -75,6 +75,29 @@
                 });
                 google.accounts.id.prompt();
             };
+
+            // on form submit call login function
+            $("form").on("submit", function (e) {
+                e.preventDefault();
+                var email = $("#email").val();
+                var password = $("#password").val();
+                login(email, password);
+            });
+            function login(email, password) {
+                $(document).ready(function () {
+                    $.ajax({
+                        url: "http://localhost:8080/restlogin",
+                        type: "POST",
+                        data: {
+                            email: email,
+                            password: password,
+                        },
+                        success: function (data) {
+                            localStorage.setItem('token', data);
+                        },
+                    });
+                });
+            }
         </script>
 
     </body>
