--- a/public/PCEconomic/src/main/resources/templates/lostpassword.html
+++ b/public/PCEconomic/src/main/resources/templates/lostpassword.html
@@ -53,6 +53,10 @@
 
                 </form>
             </div>
+            <div class="text-center">
+                <a th:href="@{/register}">Registrarse</a>
+                <a th:href="@{/login}">Iniciar Sesion</a>
+            </div>
         </main>
         <footer th:replace="layout/layout :: footer"></footer>
     </body>
