feat: added validation to change password

--- a/public/PCEconomic/src/main/resources/templates/changepassword.html
+++ b/public/PCEconomic/src/main/resources/templates/changepassword.html
@@ -37,11 +37,23 @@
                     </div>
                     <div class="col-12">
                         <label for="confirmPassword" class="form-label">Confirmar Contraseña</label>
-                        <input class="form-control" id="confirmPassword" type="password" th:field="*{newPassword}" required>
+                        <input class="form-control" id="confirmPassword" type="password" th:field="*{confirmPassword}" required>
                     </div>
                     <div class="text-center mt-3">
                         <button type="submit" class="btn btn-pc-economic-dark">Enviar</button>
                     </div>
+                </div>
+                <div class="m-1 alert alert-danger" th:if="${#fields.hasErrors('newPassword')}">
+                    <i class='bi bi-exclamation-triangle'></i>
+                    <span th:errors="*{newPassword}"></span>
+                </div>
+                <div class="m-1 alert alert-danger" th:if="${#fields.hasErrors('confirmPassword')}">
+                    <i class='bi bi-exclamation-triangle'></i>
+                    <span th:errors="*{confirmPassword}"></span>
+                </div>
+                <div class="m-1 alert alert-danger" th:if="${passwordmatch != null}">
+                    <i class='bi bi-exclamation-triangle'></i>
+                    <span th:text="${passwordmatch}"></span>
                 </div>
             </form>
         </main>
