feat: validation when trying to update a validation with the same name

--- a/public/PCEconomic/src/main/resources/templates/areaclients.html
+++ b/public/PCEconomic/src/main/resources/templates/areaclients.html
@@ -13,6 +13,11 @@
                 </div>
             </div>
 
+            <div class="mt-2 m-1 alert alert-danger" th:if="${updateDirectionError != null}">
+                <i class='bi bi-exclamation-triangle'></i>
+                <span th:text="${updateDirectionError}"></span>
+            </div>
+
             <div class="accordion" id="accordionExample">
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="miperfil">
