--- a/public/PCEconomic/src/main/resources/templates/register.html
+++ b/public/PCEconomic/src/main/resources/templates/register.html
@@ -5,9 +5,9 @@
 <head>
     <title>Register | PCEconomic</title>
 </head>
-<body>
+<body class="bgbd">
     <header th:replace="layout/layout :: navbar"></header>
-    <main class="container">
+    <main class="container bg-cont">
         <h1 class="text-center">Registrate Aqui!</h1>
 
         <div class="d-flex justify-content-center">
